--- a/index.html
+++ b/index.html
@@ -25,42 +25,64 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-4">
-          <img src="img/Ace.png" class="image-col-4" alt="Ace" style="width: 100%" />
+          <img
+            src="img/Ace.png"
+            class="image-col-4"
+            alt="Ace"
+            style="width: 100%"
+          />
           <div class="middle">
             <div class="text">Ace</div>
           </div>
         </div>
-        <div id="myCarousel" class="col-8 carousel fade" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-          </ol>
-          <!-- Wrapper for carousel items -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." alt="First Slide" />
+        <div class="col-8">
+          <div class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li
+                data-target="#myCarousel"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/faceAce.jpg" alt="First Slide" />
+              </div>
+              <div class="carousel-item">
+                <img src="img/AdrianProfile.png" alt="Second Slide" />
+              </div>
+              <div class="carousel-item">
+                <img src="img/faceAce.png" alt="Third Slide" />
+              </div>
             </div>
-            <div class="carousel-item">
-              <img src="img/AdrianProfile.png" alt="Second Slide" />
-            </div>
-            <div class="carousel-item">
-              <img src="img/faceAce.png" alt="Third Slide" />
-            </div>
+            <!-- Carousel controls -->
+            <a
+              class="carousel-control-prev"
+              href="#myCarousel"
+              data-slide="prev"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#myCarousel"
+              data-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </a>
           </div>
-          <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-          </a>
-          <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-          </a>
         </div>
       </div>
     </div>
-    <script>
+    <!-- Carousel -->
+    <script language="JavaScript" type="text/javascript">
       $(document).ready(function () {
-        $('#myCarousel').carousel();
+        $('.carousel').carousel({
+          interval: 3000,
+        });
       });
     </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
