--- a/index.html
+++ b/index.html
@@ -24,67 +24,78 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4">
-          <img
-            src="img/Ace.png"
-            class="image-col-4"
-            alt="Ace"
-            style="width: 100%"
-          />
-          <div class="middle">
-            <div class="text">Ace</div>
-          </div>
+        <div class="col-4 carousel-4">
+          <button type="button" class="btn btn-primary home-button">
+            Large button
+          </button>
         </div>
-        <div class="col-8">
-          <div class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li
-                data-target="#myCarousel"
-                data-slide-to="0"
+        <div class="col-8 carousel-8">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
                 class="active"
-              ></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Wrapper for carousel items -->
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/faceAce.jpg" alt="First Slide" />
+                <img src="..." class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item">
-                <img src="img/AdrianProfile.png" alt="Second Slide" />
+                <img src="..." class="d-block w-100" alt="..." />
               </div>
               <div class="carousel-item">
-                <img src="img/faceAce.png" alt="Third Slide" />
+                <img src="..." class="d-block w-100" alt="..." />
               </div>
             </div>
-            <!-- Carousel controls -->
-            <a
+            <button
               class="carousel-control-prev"
-              href="#myCarousel"
-              data-slide="prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
             >
-              <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
               class="carousel-control-next"
-              href="#myCarousel"
-              data-slide="next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
             >
-              <span class="carousel-control-next-icon"></span>
-            </a>
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
       </div>
     </div>
-    <!-- Carousel -->
-    <script language="JavaScript" type="text/javascript">
-      $(document).ready(function () {
-        $('.carousel').carousel({
-          interval: 3000,
-        });
-      });
-    </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
