--- a/index.html
+++ b/index.html
@@ -16,20 +16,37 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <header class="header">
+      <nav class="navbar navbar-expand-lg fixed-top py-3">
+        <div class="container"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
+        </a>
+          <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
+          <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Gallery</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="full-screen-video-container">
       <video id="vid1" autoplay loop muted preload="auto">
-        <source src="video/jumbotron_video.mp4" type="video/mp4" />
+        <source src="video/Jumbotron_Resized.mp4" type="video/mp4" />
       </video>
-      <div class="full-screen-video-content">Aztlan Ink</div>
+      <div class="full-screen-video-content"></div>
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 carousel-4">
+        <div class="col-4 carousel-ace-4">
           <button type="button" class="btn btn-primary home-button">
             Large button
           </button>
         </div>
-        <div class="col-8 carousel-8">
+        <div class="col-8 carousel-ace-8">
           <div
             id="carouselExampleIndicators"
             class="carousel slide"
@@ -59,13 +76,25 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="..." />
+                  <img
+                    src="img/ace/crying_mary.jpg"
+                    class="d-block w-100 carousel-images"
+                    alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img
+                  src="img/ace/mary_jesus.jpg"
+                  class="d-block w-100 carousel-images"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
+                <img
+                  src="img/ace/mytattoo.jpg"
+                  class="d-block w-100 carousel-images"
+                  alt="..."
+                />
               </div>
             </div>
             <button
@@ -96,7 +125,104 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-8 carousel-adrian-8">
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="..."
+                  class="d-block w-100 carousel-images"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="..."
+                  class="d-block w-100 carousel-images"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="..."
+                  class="d-block w-100 carousel-images"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <div class="col-4 carousel-adrian-4">
+          <button type="button" class="btn btn-primary home-button">
+            Large button
+          </button>
+        </div>
+      </div>
+    </div>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script>$(function () {
+    $(window).on('scroll', function () {
+        if ( $(window).scrollTop() > 10 ) {
+            $('.navbar').addClass('active');
+        } else {
+            $('.navbar').removeClass('active');
+        }
+    });
+});
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
