--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <body>
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top py-3">
-        <div class="container"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
+        <div class="container-fluid px-5"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
         </a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only">(current)</span></a></li>
+              <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only"></span></a></li>
               <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Gallery</a></li>
+                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Artists</a></li>
                       <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
                       <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
             </ul>
@@ -213,16 +213,7 @@
     </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script>$(function () {
-    $(window).on('scroll', function () {
-        if ( $(window).scrollTop() > 10 ) {
-            $('.navbar').addClass('active');
-        } else {
-            $('.navbar').removeClass('active');
-        }
-    });
-});
-    </script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
