--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg fixed-top py-3">
+      <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid px-5"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
         </a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
@@ -25,7 +25,15 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only"></span></a></li>
               <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Artists</a></li>
+                      
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-uppercase font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Artists</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                </div>
+              </li>
+
                       <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
                       <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
             </ul>
