--- a/profile.html
+++ b/profile.html
@@ -14,10 +14,10 @@
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid px-5"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
         </a>
-          <button type="button" data-toggle="col
+          <button type="button" data-toggle="col py-5
     lapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
-          <div id="navbarSupportedContent" class="col
-    lapse navbar-col
+          <div id="navbarSupportedContent" class="col py-5
+    lapse navbar-col py-5
     lapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only"></span></a></li>
@@ -38,69 +38,74 @@
         </div>
       </nav>
     </header>
-    <div class="jumbotron">
+    <div class="jumbotron pb-5">
       <div class="container">
         <img src="/img/banner/Adrian_Banner.jpg" style="width: 100%; height: 100%;">
       </div>
     </div>
-    <div class="container">
+    <div class="container bg-color">
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col py-5">
           <img src="img/adrian/tattoos/tattoo_0.jpg" style="height:350px; width:350px;" alt="" class="rounded">
         </div>
-    <div class="col">
+    <div class="col py-5">
       <img src="img/adrian/tattoos/tattoo_1.jpg" style="height:350px; width:350px;" alt="" class="rounded">
     </div>
-    <div class="col">
+    <div class="col py-5">
       <img src="img/adrian/tattoos/tattoo_2.jpg" style="height:350px; width:350px;" alt="" class="rounded">
       </div>
       </div>
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col py-5">
     <img src="/img/adrian/tattoos/tattoo_3.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_4.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_5.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_6.jpg" style="height:350px; width:350px;"  alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_7.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_8.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_9.jpg" style="height:350px; width:350px;"  alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_10.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_11.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_12.jpg" style="height:350px; width:350px;"  alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_13.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
-        <div class="col">
+        <div class="col py-5">
     <img src="img/adrian/tattoos/tattoo_14.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
         </div>
       </div>
     </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <footer>
+      <div class="footer">
+        
+      </div>
+    </footer>
   </body>
 </html>
