fixed video error and added profile.css

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Hello, world!</title>
+    <title>Bootstrap Webpage</title>
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid px-5"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
+      <nav class="navbar navbar-expand-lg shift fixed-top">
+        <div class="container-fluid px-5"><a href="index.html" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" styles="height:250px; width:250px;" alt="logo" class="logo">
         </a>
           <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
           <div id="navbarSupportedContent" class="collapse navbar-collapse">
@@ -43,9 +43,14 @@
     </header>
     <div class="full-screen-video-container">
       <video id="vid1" autoplay loop muted preload="auto">
-        <source src="video/Jumbotron_Resized.mp4" type="video/mp4" />
+        <source src="/video/Jumbotron_Resized.mp4" type="video/mp4" />
       </video>
       <div class="full-screen-video-content"></div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        
+      </div>
     </div>
     <div class="container-fluid">
       <div class="row">
