--- a/profile.html
+++ b/profile.html
@@ -7,18 +7,17 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/profiles.css">
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid px-5"><a href="#" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" alt="logo" class="logo">
+      <nav class="navbar navbar-expand-lg shift fixed-top">
+        <div class="container-fluid px-5"><a href="index.html" class="navbar navbar-brand font-weight-bold">
+          <img src="img/logo/FiveTen (1).png" alt="logo" styles="width: 250px; height: 250px;"
+          class="logo">
         </a>
-          <button type="button" data-toggle="col py-5
-    lapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
-          <div id="navbarSupportedContent" class="col py-5
-    lapse navbar-col py-5
-    lapse">
+          <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
+          <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only"></span></a></li>
               <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
@@ -30,73 +29,73 @@
                   <a class="dropdown-item" href="#">Another action</a>
                 </div>
               </li>
-
-                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
-                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
+               <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+               <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <div class="jumbotron pb-5">
-      <div class="container">
+    <div class="jumbotron bg-img pb-5">
+      <div class="container ">
         <img src="/img/banner/Adrian_Banner.jpg" style="width: 100%; height: 100%;">
       </div>
     </div>
-    <div class="container bg-color">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col py-5">
-          <img src="img/adrian/tattoos/tattoo_0.jpg" style="height:350px; width:350px;" alt="" class="rounded">
+          <img src="img/adrian/tattoos/tattoo_0.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
+          
         </div>
     <div class="col py-5">
-      <img src="img/adrian/tattoos/tattoo_1.jpg" style="height:350px; width:350px;" alt="" class="rounded">
+      <img src="img/adrian/tattoos/tattoo_1.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
     </div>
     <div class="col py-5">
-      <img src="img/adrian/tattoos/tattoo_2.jpg" style="height:350px; width:350px;" alt="" class="rounded">
+      <img src="img/adrian/tattoos/tattoo_2.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
       </div>
       </div>
       <div class="row align-items-center">
         <div class="col py-5">
-    <img src="/img/adrian/tattoos/tattoo_3.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="/img/adrian/tattoos/tattoo_3.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_4.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_5.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_6.jpg" style="height:350px; width:350px;"  alt="..." class="rounded">
-        </div>
-        <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_7.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
-        </div>
-        <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_8.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_5.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
       </div>
       <div class="row align-items-center">
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_9.jpg" style="height:350px; width:350px;"  alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_6.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_10.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_7.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_11.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_8.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
       </div>
       <div class="row align-items-center">
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_12.jpg" style="height:350px; width:350px;"  alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_9.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_13.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
         <div class="col py-5">
-    <img src="img/adrian/tattoos/tattoo_14.jpg" style="height:350px; width:350px;" alt="..." class="rounded">
+    <img src="img/adrian/tattoos/tattoo_11.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col py-5">
+    <img src="img/adrian/tattoos/tattoo_12.jpg" style="height:350px; width:350px;"  alt="..." class="shadow p-3 mb-5 bg-white rounded">
+        </div>
+        <div class="col py-5">
+    <img src="img/adrian/tattoos/tattoo_13.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
+        </div>
+        <div class="col py-5">
+    <img src="img/adrian/tattoos/tattoo_14.jpg" style="height:350px; width:350px;" alt="..." class="shadow p-3 mb-5 bg-white rounded">
         </div>
       </div>
     </div>
