--- a/index.html
+++ b/index.html
@@ -12,47 +12,98 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Bootstrap Webpage</title>
   </head>
   <body>
-    <header class="header">
-      <nav class="navbar navbar-expand-lg shift fixed-top">
-        <div class="container-fluid px-5"><a href="index.html" class="navbar navbar-brand font-weight-bold"><img src="img/logo/FiveTen (1).png" styles="height:250px; width:250px;" alt="logo" class="logo">
-        </a>
-          <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></button>
-          <div id="navbarSupportedContent" class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home<span class="sr-only"></span></a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                      
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-uppercase font-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Artists</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                </div>
-              </li>
+    <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+    <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
+  </a>
 
-                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
-                      <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About</a>
+      </li>
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        Artists
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Chicano Ace</a>
+        <a class="dropdown-item" href="#">Adrian Lazaro</a>
+      </div>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+    </div>
+  </nav>
     <div class="full-screen-video-container">
       <video id="vid1" autoplay loop muted preload="auto">
         <source src="/video/Jumbotron_Resized.mp4" type="video/mp4" />
       </video>
-      <div class="full-screen-video-content"></div>
+      <div class="full-screen-video-content"><img src="/img/logo/welcome.png" alt="welcome" style="width: 50vw;" class="img-fluid"></div>
     </div>
-    <div class="container-fluid">
-      <div class="row">
-        
+    <div id="about" class="container-fluid">
+      <div class="row bg-img2 d-flex justify-content-center">
+        <div class="card">
+          <h1 class="display-4 text-white">C.O.V.I.D. 19 PROTOCOL</h1>
+          <p class="lead text-white">In order to provide the safest possible tattoo experience for both our clients and artists, we have implemented several new procedures.<br>
+1. We will be strictly appointment only and have 1 person per practitioner with plenty of distance between stations.
+Unfortunately, this means you may not bring anyone with you to your appointment. We may still be able to accommodate
+same-day appointments depending on our schedule. Please just give us a call first.<br>
+2. We will require everyone to wear a mask at all times while in the studio. We encourage everyone to consider purchasing
+a reusable/washable mask. As for piercing clientele, this means we will not be piercing the nose or the mouth area. You will need to keep your mask on. If you do not have a mouth cover, we will provide you one for free.<br>
+3. Immediately upon entering, you must use the provided hand sanitizer. Also, we ask that you sanitize your phone or
+other items you will frequently be touching during your visit. Please leave any nonessential items at home or in your car. We will then take your temperature with our touchless thermometer upon entering the shop.<br>
+4. We have gone digital with our waivers. Now you will fill out your consent and disclosure forms on an iPad that will
+be thoroughly disinfected after each use or your own iPhone if you have one.<br>
+5. We have increased our already stringent cleaning protocols. We continue to use hospital-grade disinfectants and
+cleaners and disinfect common area surfaces and door handles several times an hour.<br>
+6. We also recently installed an expensive N.A.S.A. approved AiroCide-Air Purification Technology System
+in our shop that kills airborne viruses. We care for your safety. See how it works!<br>
+7. By now, this should go without saying but, if you're feeling even the slightest bit unwell, please call us to reschedule.<br>
+We will be happy to accommodate you. We ask the same of all the artists and staff at Five Ten Tattoo, and your patience is appreciated.<br>
+Thank you for your support and understanding.<br> We look forward to making beautiful tattoos with you!
+Staff at Five Ten Tattoo
+</p></div>
+        </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid ">
+      <div class="row">
+        <div class="col-md-4 col-sm-4">
+        <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="artist-banner-thumbnail img-fluid">
+        <button type="button" class="btn btn-primary home-button">
+            Chicano Ace
+          </button>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <img src="img/banner/Artist_Selector2.png" alt="artist-selector" class="img-fluid"></div>
+          <div class="col-md-4 col-sm-4">
+            <img src="/img/banner/AdrianProfile (1).jpg" width="100%" height="100%" lt="adrian_thumbnail" class="artist-banner-thumbnail img-fluid">
+           <button type="button" class="btn btn-primary home-button">
+            Adrian Lazaro
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-4 carousel-ace-4">
           <button type="button" class="btn btn-primary home-button">
@@ -91,21 +142,21 @@
               <div class="carousel-item active">
                   <img
                     src="img/ace/crying_mary.jpg"
-                    class="d-block w-100 carousel-images"
+                    class="carousel-images"
                     alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="img/ace/mary_jesus.jpg"
-                  class="d-block w-100 carousel-images"
+                  class="carousel-images"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
                   src="img/ace/mytattoo.jpg"
-                  class="d-block w-100 carousel-images"
+                  class="carousel-images"
                   alt="..."
                 />
               </div>
@@ -137,100 +188,13 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-8 carousel-adrian-8">
-          <div
-            id="carouselExampleIndicators"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleIndicators"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="..."
-                  class="d-block w-100 carousel-images"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="..."
-                  class="d-block w-100 carousel-images"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="..."
-                  class="d-block w-100 carousel-images"
-                  alt="..."
-                />
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-        <div class="col-4 carousel-adrian-4">
-          <button type="button" class="btn btn-primary home-button">
-            Large button
-          </button>
-        </div>
-      </div>
-    </div>
+    </div> -->
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
   </body>
 </html>
