--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
   <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="about.html">About</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         Artists
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Chicano Ace</a>
-        <a class="dropdown-item" href="#">Adrian Lazaro</a>
+        <a class="dropdown-item" href="ace.html">Chicano Ace</a>
+        <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
       </div>
     </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href=".contact.html">Contact</a>
       </li>
     </ul>
   </div>
