correct link added

--- a/ace.html
+++ b/ace.html
@@ -12,6 +12,10 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css"> 
     <link rel="stylesheet" href="/css/ace.css" />
     <title>Hello, world!</title>
   </head>
@@ -63,7 +67,17 @@
         </div>
       </div>
     </nav>
+        <div class="banner">
+      <img src="/img/banner/Ace_2.0.jpg" alt="" class="ace_banner">
+    </div>
 
+    <div class="footer bg-dark fixed-bottom d-flex justify-content-center">
+      <div class="lineicon lni-32 p-2">
+      <i class="lni lni-instagram-filled"></i>
+      <i class="lni lni-facebook-filled"></i>
+      <i class="lni lni-pinterest"></i>
+      <i class="lni lni-twitter-filled"></i>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
