--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </li>
       <li class="nav-item">
-        <a class="nav-link" href=".contact.html">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
     </ul>
   </div>
@@ -61,31 +61,28 @@
     <div class="container-fluid">
       <div class="row bg-img2 d-flex justify-content-center">
         <div class="card text-center">
-          <h1 class="display-4 text-light">C.O.V.I.D. 19 PROTOCOL</h1>
-          <p class="lead text-light fw-bold">In order to provide the safest possible tattoo experience for both our clients and artists, we have implemented several new procedures.<br>
-1. We will be strictly appointment only and have 1 Person per practitioner with plenty of distance between stations.
-Unfortunately, this means you may not bring anyone with you to your appointment. We may still be able to accommodate
-same-day appointments depending on our schedule. Please just give us a call first.<br>
-2. We will require everyone to wear a mask at all times while in the studio. We encourage everyone to consider purchasing
-a reusable/washable mask. As for piercing clientele, this means we will not be piercing the nose or the mouth area. You will need to keep your mask on. If you do not have a mouth cover, we will provide you one for free.<br>
-3. Immediately upon entering, you must use the provided hand sanitizer. Also, we ask that you sanitize your phone or
+          <h1 class="display-4 text-danger">C.O.V.I.D. 19 PROTOCOL</h1>
+          <p class="lead text-white fw-bold">In order to provide the safest possible tattoo experience for both our clients and artists, we have implemented several new procedures.<br>
+<br>1. We will be strictly appointment only and have one Person per practitioner with plenty of distance between stations.
+Unfortunately, this means you may not bring anyone with you to your appointment. We may still be able to accommodate same-day appointments depending on our schedule. Please just give us a call first.<br>
+<br>2. We will require everyone to wear a mask at all times while in the studio. We encourage everyone to consider purchasing a reusable/washable mask.You will need to keep your mask on. If you do not have a mouth cover, we will provide you one for free.<br>
+<br>3. Immediately upon entering, you must use the provided hand sanitizer. Also, we ask that you sanitize your phone or
 other items you will frequently be touching during your visit. Please leave any nonessential items at home or in your car. We will then take your temperature with our touchless thermometer upon entering the shop.<br>
-4. We have gone digital with our waivers. Now you will fill out your consent and disclosure forms on an iPad that will
+<br>4. We have gone digital with our waivers. Now you will fill out your consent and disclosure forms on an iPad that will
 be thoroughly disinfected after each use or your own iPhone if you have one.<br>
-5. We have increased our already stringent cleaning protocols. We continue to use hospital-grade disinfectants and
+<br>5. We have increased our already stringent cleaning protocols. We continue to use hospital-grade disinfectants and
 cleaners and disinfect common area surfaces and door handles several times an hour.<br>
-6. We also recently installed an expensive N.A.S.A. approved AiroCide-Air Purification Technology System
+<br>6. We also recently installed an expensive N.A.S.A. approved AiroCide-Air Purification Technology System
 in our shop that kills airborne viruses. We care for your safety. See how it works!<br>
-7. By now, this should go without saying but, if you're feeling even the slightest bit unwell, please call us to reschedule.<br>
-We will be happy to accommodate you. We ask the same of all the artists and staff at Five Ten Tattoo, and your patience is appreciated.<br>
-Thank you for your support and understanding.<br> We look forward to making beautiful tattoos with you!
-Staff at Five Ten Tattoo
+<br>7. By now, this should go without saying but, if you're feeling even the slightest bit unwell, please call us to reschedule.<br>
+<br>We will be happy to accommodate you. We ask the same of all the artists and staff at Five Ten Tattoo, and your patience is appreciated. Thank you for your support and understanding.We look forward to making beautiful tattoos with you!
+Staff at Five Ten Studio<br>
 </p></div>
         </div>
       </div>
     </div>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row bg-light">
         <div class="col-md-4 col-sm-4">
         <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="artist-banner-thumbnail img-fluid">
         <button type="button" class="btn btn-primary home-button">
@@ -93,42 +90,51 @@ Staff at Five Ten Tattoo
           </button>
         </div>
         <div class="col-md-4 col-sm-4">
-          <img src="img/banner/Artist_Selector2.png" alt="artist-selector" class="img-fluid"></div>
+          <img src="img/logo/Artist_Selector2.png" alt="artist-selector" class="img-fluid"></div>
           <div class="col-md-4">
-            <img src="/img/banner/AdrianProfile (1).jpg" width="100%" height="100%" lt="adrian_thumbnail" class="artist-banner-thumbnail img-fluid">
+            <img src="/img/banner/AdrianProfile (1).jpg" alt="adrian_thumbnail" class="artist-banner-thumbnail img-fluid w-100 h-50">
            <button type="button" class="btn btn-primary home-button">
             Adrian Lazaro
           </button>
         </div>
       </div>
-      <div class="container-fluid">
-    <div id="demo" class="carousel slide" data-ride="carousel">
+    </div>
+    <div class="container-fluid">
+      <div id="demo" class="carousel slide"       data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="carousel-caption">
                     <p>This was the best tattoo experience I’ve ever had! Not only are the artists extremely talented, but they also make sure that you’re as comfortable as you can possibly be while getting your tattoo done. Shout out to the artist who totally made my experience amazing, ...Totally worth all the pain</p> <img src="https://i.imgur.com/lE89Aey.jpg">
                     <div id="image-caption">Chris Mahomes</div>
-                    <h2 id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></h2>
+                    <div id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption">
                   <p>I am not exaggerating when I say that I get at least one compliment a day... This tattoo is beyond vibrant, and downright shocks people that it is real. I’ve had people gather around me to stare at it and ooo and ahh countless times. It’s kind of nuts how often it happens!!</p> <img src="https://i.imgur.com/QptVdsp.jpg" class="img-fluid">
                     <div id="image-caption">Kevin Groves</div>
-                    <h2 id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></h2>
+                    <div id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="carousel-caption">
                     <p>There is Zero attitude at Five Ten. The shop is clean and inviting. let me start by saying that everyone at this shop is So talented... I would trust anyone here to ink me.</p> <img src="https://i.imgur.com/jQWThIn.jpg" class="img-fluid">
                     <div id="image-caption">Henry Field</div>
-                    <h2 id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></h2>
-                </div>
-            </div>
-        </div> <a class="carousel-control-prev" href="#demo" data-slide="prev"> <i class='fas fa-arrow-left'></i> </a> <a class="carousel-control-next" href="#demo" data-slide="next"> <i class='fas fa-arrow-right'></i> </a>
+                    <div id="stars"><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i><i class="lni lni-star-filled"></i></div>
+                  </div>
+              </div>
+          </div>
+        </div> 
+        <a class="carousel-control-prev" href="#demo" data-slide="prev"> <i class='fas fa-arrow-left'></i> </a> <a class="carousel-control-next" href="#demo" data-slide="next"> <i class='fas fa-arrow-right'></i> </a></div>
+      </div>
     </div>
-</div>
-  
+    <div class="footer d-flex justify-content-center">
+      <div class="lineicon lni-32 p-2">
+      <i class="lni lni-instagram-filled"></i>
+      <i class="lni lni-facebook-filled"></i>
+      <i class="lni lni-pinterest"></i>
+      <i class="lni lni-twitter-filled"></i>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
