--- a/adrian.html
+++ b/adrian.html
@@ -7,10 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/adrian.css">
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
+  <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
     <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
@@ -44,16 +47,14 @@
   </div>
     </div>
   </nav>
-    <div class="jumbotron bg-img pb-5">
-      <div class="container ">
-        <img src="/img/banner/Adrian_Banner.jpg" style="width: 100%; height: 100%;">
-      </div>
+    <div class="banner pb-5">
+        <img class="bg-img"src="/img/banner/Adrian_Banner.jpg" style="width: 100%; height: 100%;">
     </div>
-    <div class="container">
+    <div class="container bg-light">
       <div class="row align-items-center">
+        <h1 class="py-5"><h1><span class="border border-5 p-3 border-warning shadow-lg">Gallery</span></h1>
         <div class="col py-5">
           <img src="img/adrian/tattoos/tattoo_0.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
-          
         </div>
     <div class="col py-5">
       <img src="img/adrian/tattoos/tattoo_1.jpg" style="height:350px; width:350px;" alt="" class="shadow p-3 mb-5 bg-white rounded">
@@ -107,6 +108,13 @@
         </div>
       </div>
     </div>
+    <div class="footer d-flex justify-content-center">
+      <div class="lineicon lni-32 p-2">
+      <i class="lni lni-instagram-filled"></i>
+      <i class="lni lni-facebook-filled"></i>
+      <i class="lni lni-pinterest"></i>
+      <i class="lni lni-twitter-filled"></i>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -118,7 +126,5 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-      </div>
-    </footer>
   </body>
 </html>
