--- a/contact.html
+++ b/contact.html
@@ -21,39 +21,94 @@
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-    <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
-  </a>
+    <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo"></a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end px-5" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Artists
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href=ace.html>Chicano Ace</a>
+          <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
+        </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
-      </li>
-      <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Artists
-      </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Chicano Ace</a>
-        <a class="dropdown-item" href="adrian.html">Adrian Lazaro</a>
-      </div>
-    </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+    </nav>
+    <div id="form"></div>
+    <div class="container">
+      <b><span style="letter-spacing: 3.5px; ">CONTACT US</span><br><br></br>
+      <span class="Address">ADDRESS<br>
+      555 Melrose Ave, Los Angeles, CA 90029<br>
+      Tel: 555-555-5555 Fax: 555-555-5556<br>
+      info@fiveten.com><br><br>
+      <span>Opening Hours</span><br><br>
+      Monday-Thursday: 8am-10pm<br>
+      Friday-Saturday: 8am-11pm<br>
+      Sunday: 10am-10pm</span><br><br>
+      <form action="/action_page.php">
+            <label for="fname">First Name</label>
+              <input
+                type="text"
+                id="fname"
+                name="firstname"
+                placeholder="Your first name..."
+              />
+
+              <label for="lname">Last Name</label>
+              <input
+                type="text"
+                id="lname"
+                name="lastname"
+                placeholder="Your last name..."
+              /><br />
+
+              <br><label for="email">Email</label>
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="Enter your email..."
+              /><br>
+
+              <br><label for="artist">Choose Artist</label>
+              <select id="artist" name="artist">
+                <option value="adrian">Adrian Lazaro</option>
+                <option value="ace">Chicano Ace</option>
+
+
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Type your message here"
+                style="height: 200px"
+              ></textarea>
+              <input type="submit" value="Submit" />
+              </form><br>
+    </div>
+  </div>
     
-  
+  <div class="footer fixed-bottom d-flex justify-content-center">
+      <div class="lineicon lni-32 p-2">
+      <i class="lni lni-instagram-filled"></i>
+      <i class="lni lni-facebook-filled"></i>
+      <i class="lni lni-pinterest"></i>
+      <i class="lni lni-twitter-filled"></i>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
