final link changes

--- a/ace.html
+++ b/ace.html
@@ -15,14 +15,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css"> 
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="/css/ace.css" />
     <title>Hello, world!</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo" />
         </a>
 
@@ -43,9 +43,6 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -61,7 +58,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=".contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -70,8 +67,65 @@
         <div class="banner">
       <img src="/img/banner/Ace_2.0.jpg" alt="" class="ace_banner">
     </div>
-
-    <div class="footer bg-dark fixed-bottom d-flex justify-content-center">
+    <div class="container bg-light">
+      <div class="row align-items-center">
+        <h1 class=><h1><span class="border border-5 p-3 m-4 border-warning shadow-lg">Gallery</span></h1>
+        <div class="col">
+          <img src="img/ace/Ace_0.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+        <img src="/img/ace/ace_2.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+      </div>
+      <div class="col">
+        <img src="/img/ace/ace_3.jpg" style="height:350px; width:350px;" alt="" class="shadow pb-3 rounded">
+      </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col">
+          <img src="/img/ace/ace_4.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+            <img src="img/ace/ace_6.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+            <img src="img/ace/ace_7.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col">
+            <img src="img/ace/ace_8.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+            <img src="img/ace/ace_9.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+            <img src="img/ace/Ace_10.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col">
+            <img src="img/ace/ace_11.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
+          </div>
+        <div class="col">
+          <img src="img/ace/ace_12.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+          <img src="img/ace/ace_13.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="img/ace/ace_14.jpg" style="height:350px; width:350px;"  alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+          <img src="img/ace/ace_15.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+        <div class="col">
+          <img src="img/ace/crying_mary.jpg" style="height:350px; width:350px;" alt="..." class="shadow pb-3 rounded">
+        </div>
+      </div>
+    </div>
+    <div class="footer bg-transparent fixed-bottom d-flex justify-content-center">
       <div class="lineicon lni-32 p-2">
       <i class="lni lni-instagram-filled"></i>
       <i class="lni lni-facebook-filled"></i>
