--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
     <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
   </a>
 
@@ -32,9 +32,6 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -62,20 +59,14 @@
       <div class="row bg-img2 d-flex justify-content-center">
         <div class="card text-center">
           <h1 class="display-4 text-danger">C.O.V.I.D. 19 PROTOCOL</h1>
-          <p class="lead text-white fw-bold">In order to provide the safest possible tattoo experience for both our clients and artists, we have implemented several new procedures.<br>
+          <p class="lead text-white fw-bold">To provide the safest possible tattoo experience for both our clients and artists, we have put into use new procedures while inside of the Studio.<br>
 <br>1. We will be strictly appointment only and have one Person per practitioner with plenty of distance between stations.
-Unfortunately, this means you may not bring anyone with you to your appointment. We may still be able to accommodate same-day appointments depending on our schedule. Please just give us a call first.<br>
-<br>2. We will require everyone to wear a mask at all times while in the studio. We encourage everyone to consider purchasing a reusable/washable mask.You will need to keep your mask on. If you do not have a mouth cover, we will provide you one for free.<br>
-<br>3. Immediately upon entering, you must use the provided hand sanitizer. Also, we ask that you sanitize your phone or
-other items you will frequently be touching during your visit. Please leave any nonessential items at home or in your car. We will then take your temperature with our touchless thermometer upon entering the shop.<br>
-<br>4. We have gone digital with our waivers. Now you will fill out your consent and disclosure forms on an iPad that will
-be thoroughly disinfected after each use or your own iPhone if you have one.<br>
-<br>5. We have increased our already stringent cleaning protocols. We continue to use hospital-grade disinfectants and
-cleaners and disinfect common area surfaces and door handles several times an hour.<br>
-<br>6. We also recently installed an expensive N.A.S.A. approved AiroCide-Air Purification Technology System
-in our shop that kills airborne viruses. We care for your safety. See how it works!<br>
-<br>7. By now, this should go without saying but, if you're feeling even the slightest bit unwell, please call us to reschedule.<br>
-<br>We will be happy to accommodate you. We ask the same of all the artists and staff at Five Ten Tattoo, and your patience is appreciated. Thank you for your support and understanding.We look forward to making beautiful tattoos with you!
+Unfortunately, this means you may not bring anyone with you to your appointment. We may still be able to accommodate same-day appointments, depending on our schedule. Please give us a call first.
+<br>2. We will require everyone to wear a mask at all times while in the Studio. We encourage everyone to think about buying a reusable/washable mask. You will need to keep your mask on. If you do not have a mouth cover, we will provide you one for free.<br>
+<br>3.  Immediately upon entering, you must use hand sanitizer. Also, we ask that you are carefully clean your phone or other items you will often be touching during your visit. Please leave any items at home or in your car that are non-essential during your visit. We will then take your temperature with our touchless thermometer upon entering the shop.<br>4. To reduce the amount of contact within the Studio, we have gone digital with our waivers. Now you will fill out your consent and disclosure forms on an iPad that will be thoroughly disinfected after each use or your own iPhone if you have one.<br>
+<br>5. By now, this should go without saying but, if you're feeling even the slightest bit unwell, please call us to reschedule. We will be happy to accommodate you.<br> 
+<br>6. We ask the same of all the artists and staff at Five Ten Tattoo, and your patience is appreciated. Thank you for your support and understanding.
+<br>We look forward to making beautiful tattoos with you!
 Staff at Five Ten Studio<br>
 </p></div>
         </div>
@@ -84,15 +75,15 @@ Staff at Five Ten Studio<br>
     <div class="container-fluid">
       <div class="row bg-light">
         <div class="col-md-4 col-sm-4">
-        <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="artist-banner-thumbnail img-fluid">
+        <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
         <button type="button" class="btn btn-primary home-button">
             Chicano Ace
           </button>
         </div>
-        <div class="col-md-4 col-sm-4">
-          <img src="img/logo/Artist_Selector2.png" alt="artist-selector" class="img-fluid"></div>
-          <div class="col-md-4">
-            <img src="/img/banner/AdrianProfile (1).jpg" alt="adrian_thumbnail" class="artist-banner-thumbnail img-fluid w-100 h-50">
+        <div class="col-md-4 col-sm-4 d-flex justify-content-center align-self-center">
+          <img src="img/logo/Artist_Selector2.png" alt="artist-selector" class="w-100 h-100 img-fluid"></div>
+          <div class="col-md-4 col-sm-4">
+            <img src="/img/banner/AdrianProfile (1).jpg" alt="adrian_thumbnail" class="w-100 h-100 img-fluid artist-banner-thumbnail">
            <button type="button" class="btn btn-primary home-button">
             Adrian Lazaro
           </button>
