--- a/adrian.html
+++ b/adrian.html
@@ -10,12 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/adrian.css">
   </head>
   <nav class="navbar navbar-expand-lg shift fixed-top navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
     <img src="/img/logo/FiveTen (1).png" alt="logo" class="logo">
   </a>
 
@@ -27,9 +26,6 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
