--- a/ace.html
+++ b/ace.html
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    <div class="footer bg-transparent fixed-bottom d-flex justify-content-center">
+    <div class="footer d-flex justify-content-center">
       <div class="lineicon lni-32 p-2">
       <i class="lni lni-instagram-filled"></i>
       <i class="lni lni-facebook-filled"></i>
