--- a/index.html
+++ b/index.html
@@ -74,19 +74,16 @@ Staff at Five Ten Studio<br>
     </div>
     <div class="container-fluid">
       <div class="row bg-light">
-        <div class="col-md-4 col-sm-4">
-        <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
-        <button type="button" class="btn btn-primary home-button">
-            Chicano Ace
-          </button>
+        <div class="col-md-4 col-sm-4 d-flex justify-content-center align-items-center">
+          <img src="/img/ace/Ace_Banner.jpg" alt="ace_thumbnail" class="w-100 h-100 img-fluid  artist-banner-thumbnail">
+        <button id="a_button"><a type="button" href="ace.html"class="btn btn-primary">Chicano Ace</a></button>
         </div>
         <div class="col-md-4 col-sm-4 d-flex justify-content-center align-self-center">
           <img src="img/logo/Artist_Selector2.png" alt="artist-selector" class="w-100 h-100 img-fluid"></div>
-          <div class="col-md-4 col-sm-4">
+          <div class="col-md-4 col-sm-4 d-flex justify-content-center align-items-center">
             <img src="/img/banner/AdrianProfile (1).jpg" alt="adrian_thumbnail" class="w-100 h-100 img-fluid artist-banner-thumbnail">
-           <button type="button" class="btn btn-primary home-button">
-            Adrian Lazaro
-          </button>
+            <button id="a_button"><a href="adrian.html"type="button" class="btn btn-primary">
+              Adrian Lazaro</a></button>
         </div>
       </div>
     </div>
